2007-09-11  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Fixed CFNetwork version check so it actually works.

        * Misc/WebKitVersionChecks.h:
        * WebView/WebView.mm:
        (+[WebView _setCacheModel:]): Don't use NSVersionOfLinkTimeLibrary because
        we don't link against CFNetwork directly, so it returns -1. Also, use
        the proper hex encoding instead of decimal numbers.

2007-09-11  Darin Adler  <darin@apple.com>

        - redo fix for <rdar://problem/5472899> REGRESSION (TOT): Crash in FrameLoadDelegate loading stationery

        * WebView/WebView.mm:
        (getMethod): Added.
        (-[WebView _cacheResourceLoadDelegateImplementations]): Use getMethod.
        (-[WebView _cacheFrameLoadDelegateImplementations]): Ditto.

2007-09-11  Darin Adler  <darin@apple.com>

        Rubber-stamped by Dave Harrison.

        * WebCoreSupport/WebSystemInterface.m: (InitWebCoreSystemInterface):
        Removed wkCreateURLPasteboardFlavorTypeName and wkCreateURLNPasteboardFlavorTypeName.

2007-09-11  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        - fix <rdar://problem/5472899> REGRESSION (TOT): Crash in FrameLoadDelegate loading stationery

        * Misc/WebNSObjectExtras.h:
        (class_getMethodImplementation): Added.
        (method_setImplementation): Added.

        * WebView/WebHTMLView.mm: (+[WebHTMLViewPrivate initialize]):
        * Carbon/HIViewAdapter.m: (+[HIViewAdapter bindHIViewToNSView:nsView:]):
        Remove old-ObjC code path, since WebNSObjectExtras.h now implements everything we need.

        * WebView/WebView.mm:
        (-[WebView _cacheResourceLoadDelegateImplementations]): Don't bother doing a separate
        respondsToSelector call, since class_getMethodImplementation will return 0 for selectors
        that we don't respond to. The bug fix is to actually set the cached pointer to 0.