@@ -1,3 +1,11 @@
+2007-09-11  Timothy Hatcher  <timothy@apple.com>
+
+        Reviewed by Darin.
+
+        Remove the unused class_getMethodImplementation function.
+
+        * Misc/WebNSObjectExtras.h:
+
 2007-09-11  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
